# My-Gen-Minutes

Gen-Minutes/: CLAUDE.md  Cargo.toml  README.md  eslint.config.mjs  fine_tuning.md  generate-sitemap.js  next.config.js  package.json  start-dev.sh  tailwind.config.js  webpack.sw.config.js
Gen-Minutes-server/: .gitignore  README.md  requirements.txt  run.sh
Gen-Minutes-server-docker-image/: Dockerfile  LICENSE
Gen-Minutes-server/rust/: nginx.conf  push
Gen-Minutes-server/rust/speaker-diarization/: bootstrap.sh
Gen-Minutes/.cargo/: config.toml
Gen-Minutes/.github/: copilot-instructions.md
Gen-Minutes/.husky/: post-rewrite
Gen-Minutes/dev/: Caddyfile
Gen-Minutes/public/: demo-upload.webm  privacy-policy.html  sitemap.xml  terms-of-use.html
Gen-Minutes/src/: theme.tsx
GovClerkMinutes/: .gitignore  CLAUDE.md  README.md  fine_tuning.md  generate-sitemap.js  next.config.js  package-lock.json  package.json  start-dev.sh  tsconfig.json
GovClerkMinutes-server/: README.md  main.py  run.sh
GovClerkMinutes-server-docker-image/: Dockerfile  LICENSE  README.md
GovClerkMinutes-server/rust/: Cargo.toml  curl  push
GovClerkMinutes-server/rust/src/: create_minutes.rs  error.rs  get_current_balance.rs  get_diarization.rs  get_required_credits.rs  get_snippet.rs  main.rs  posthog.rs  python_process.rs  rate_limiter.rs  regenerate_minutes.rs  replicate_webhook.rs  transcript.rs
GovClerkMinutes/.cargo/: linux-config.toml
GovClerkMinutes/dev/: Caddyfile
GovClerkMinutes/public/: GovClerk-sitemap.xml  manifest.json  privacy-policy.html  robots.txt  sitemap.xml  terms-of-use.html
GovClerkMinutes/src/: middleware.ts
minutes-generator/: .gitignore  .prettierignore  README.md  configure.ps1  configure.sh  fine_tuning.md  generate-sitemap.js  jest.config.js  jest.setup.ts  knip.json  next.config.js  package-lock.json  package.json  prepare.sh  rewardful.d.ts  webpack.lambda.config.js
minutes-generator/.husky/: pre-push
minutes-generator/dev/: docker-compose.yml
minutes-generator/platform/refresh-server/: Cargo.toml
minutes-generator/platform/refresh-server/src/: main.rs
minutes-generator/platform/server/: Cargo.toml  build.rs  install_pandoc.sh
minutes-generator/platform/server/assets/: pandoc-reference.docx
minutes-generator/platform/server/assets/prompts/shared/: _minutes_context_sections.hbs  _shared_final_minutes_instructions.hbs  _shared_minutes_guidelines.hbs  _shared_minutes_intro.hbs
minutes-generator/platform/server/assets/prompts/steps/: create_agenda.hbs  finetuned_minutes_prefix.hbs  meeting_notes.hbs  regenerate_agenda.hbs  regenerate_with_feedback.hbs
minutes-generator/platform/server/assets/prompts/system/: meeting_notes_system.hbs  oracle_feedback_system.hbs
minutes-generator/platform/server/python/: decode.py  main.py
minutes-generator/platform/server/src/: crash_handler.rs  create_agenda.rs  error.rs  get_clusters.rs  get_email.rs  main.rs  posthog.rs  process_custom_template.rs  python.rs  regenerate_agenda.rs  regenerate_minutes.rs  resume_transcribe.rs  s3.rs  span_timer.rs  speaker_identification.rs  transcript.rs  upload_key.rs
minutes-generator/platform/server/src/minutes/steps/: final_minutes.rs  first_draft.rs  image_final_minutes.rs  regenerate.rs
minutes-generator/platform/server/src/pandoc/: convert.rs  mod.rs  pdf.rs
minutes-generator/platform/server/src/prompt_templates/: mod.rs
minutes-generator/platform/server/src/speech/: detection.rs  mod.rs  scribe.rs
minutes-generator/platform/server/src/transcribed_ranges/: mod.rs
minutes-generator/platform/server/src/utils/: time.rs
minutes-generator/platform/server/src/websocket/: manager.rs
minutes-generator/public/: clerkdirect-sitemap.xml  demo-labeler.webm  demo-minutes.webm  manifest.json  robots.txt  terms-of-use.html
minutes-generator/src/: middleware.ts
server-docker-image/: README.md
src/utils/: site.ts
(+1339 files in other folders)
