[package]
name = "minutes-generator-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
aws-sdk-s3 = "0.28.0"
aws-config = "0.55.3"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tempfile = "3.6.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
openssl = { version = "0.10", features = ["vendored"] }
axum = { version = "0.6.18", features = ["headers"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", default_features = false, features = ["auth", "cors", "trace"] }
mysql_async = "0.32.2"
once_cell = "1.18.0"
jsonwebtoken = "8.3.0"
http = "0.2.9"
hmac = "0.12.1"
sha2 = "0.10.7"
digest = "0.10.7"
linfa-clustering = "0.6.1"
linfa = "0.6.1"
ndarray-rand = "0.14.0"
ndarray = "0.15.6"
linfa-datasets = { version = "0.6.1", features = ["generate"]}
tiktoken-rs = "0.5.0"
futures = "0.3.28"
hex = "0.4.3"
structopt = "0.3.26"
rand = "0.8.5"
svix = "1.6.0"
tracing-appender = "0.2.2"
dirs = "5.0.1"
hound = "3.5.1"
libc = "0.2.149"
regex = "1.10.2"
num_cpus = "1.16.0"
ratelimit = "0.7.1"
chrono = "0.4.32"

